# Edward-Bot

./: .gitignore  404.html  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml  pipeline.yml
Uso do Bot/: index.html
api/Bot/: index.html
api/Bot/Comandos/Cogs/Cheatsheets/: index.html
cheatsheets/: index.html
cheatsheets/docker/: index.html
cheatsheets/docker/docker-compose/: index.html
cheatsheets/git/: index.html
docker/: Dockerfile
docs/: index.md
docs/api/: bot.md
docs/api/Bot/: index.md
docs/api/Bot/Comandos/Cogs/: Cheatsheets.md
docs/cheatsheets/: index.md
docs/cheatsheets/docker/: docker-compose.md  index.md
docs/cheatsheets/git/: index.md
edward/: bot.py  config.py  read_cheatsheets.py
edward/cogs/: cheatsheet.py  create_gpt.py  post_video.py
edward/services/: gpt.py
search/: search_index.json
tests/: test_cheatsheet.py  test_config.py
